# ProjectModernCPP

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Caddyfile  README.md  proiect_modern_cpp.sln  proiect_modern_cpp.vcxproj  proiect_modern_cpp.vcxproj.filters
client/: intrebari.json  proiect_modern_cpp.vcxproj  proiect_modern_cpp.vcxproj.filters
client/assets/: .gitattributes
client/src/: Board.cpp  Board.hpp  County.cpp  County.hpp  GameSession.cpp  GameSession.hpp  Lobby.cpp  Lobby.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.qrc  MainWindow.ui  MyThread.cpp  MyThread.hpp  Session.cpp  Session.hpp  User.cpp  User.hpp  main.cpp
client_discord/: proiect_modern_cpp_client_discord.vcxproj  proiect_modern_cpp_client_discord.vcxproj.filters  project_modern_cpp_client_discord.vcxproj  project_modern_cpp_client_discord.vcxproj.filters
client_discord/src/: RichPresence.cpp  RichPresence.hpp  dllmain.cpp
database/: db.json
server/: intrebari.json  project_modern_cpp_server.vcxproj  project_modern_cpp_server.vcxproj.filters
server/migrations/: down.sql  up.sql
server/src/: Database.hpp  main.cpp
server/src/game/: Lobby.cpp  Lobby.hpp  Match.cpp  Match.hpp  Player.hpp  Question.cpp  Question.hpp  Territory.cpp  Territory.hpp  User.hpp
server/src/middlewares/: AuthenticatedGuard.hpp  NotAuthenticatedGuard.hpp  Session.hpp
server/src/models/: PastMatch.hpp  User.hpp  UserMatch.hpp
src/: Board.cpp  Board.hpp  County.cpp  County.hpp  MainWindow.cpp  MainWindow.hpp  Session.cpp  Session.hpp  User.cpp  User.hpp  main.cpp
src/inc/user/: user.cpp  (+1 more)
(+2 files in other folders)
